# aer

./: .gitignore  Cargo.toml  EXAMPLE.ENV  Makefile  README.md
src/: forecast.rs  influx.rs  lib.rs  main.rs  sensor.rs  static_vars.rs  time.rs  weather.rs
