[package]
name = "aer"
version = "0.1.0"
authors = ["Chris <caemor@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = { version = "0.6.0"}
#embedded-graphics = {path = "../embedded-graphics/embedded-graphics"}#= {path = "../embedded-graphics/simulator"}#= {git = "https://github.com/jamwaffles/embedded-graphics", branch = "master"}
embedded-graphics-simulator = {version = "0.2.0", optional = true}
#embedded-graphics-simulator = {path = "../embedded-graphics/simulator"}#= {git = "https://github.com/jamwaffles/embedded-graphics", branch = "master", optional = true}
epd-waveshare = "0.4.0"
chrono = "0.4.9"
openweather = { git = "https://github.com/caemor/openweather"}
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"
linux-embedded-hal = "0.3.0"
bme680 = "0.5.0"
anyhow = "1.0.27"
influx_db_client = { git = "https://github.com/caemor/InfluxDBClient-rs", default-features = false, features = ["rustls-tls"] }
#profont = "0.3.0"
embedded-hal = {version = "0.2.3", features = ["unproven"]}
futures-executor = {version = "0.3.4"}
lazy_static = "1.4.0"
tokio = "0.2.13"


[features]
default = []

#graphics = ["embedded-graphics"]
# epd1in54 = ["epd-waveshare/epd1in54"]
epd2in9 = []
epd4in2 = []
simulator = ["embedded-graphics-simulator"]
# offers an alternative fast full lut for type_a displays, but the refresh isnt as clean looking
#type_a_alternative_faster_lut = []

[profile.release]
codegen-units=1




